--- a/Intro_to_RNN.ipynb
+++ b/Intro_to_RNN.ipynb
@@ -134,11 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "source": [
     "A Fully Connected/Dense layer is insensitive to the order of features.\n",
     "\n",
@@ -147,8 +143,30 @@
     "\\Theta^T \\cdot \\x =  \\Theta[ \\text{perm} ]^T \\cdot \\x[ \\text{perm} ] \n",
     "$$\n",
     "\n",
-    "where  $\\Theta[ \\text{perm} ]^T$ and $\\x[ \\text{perm} ]$ are permuations of $\\Theta, \\x$.\n",
-    "\n"
+    "where  $\\Theta[ \\text{perm} ]^T$ and $\\x[ \\text{perm} ]$ are permutations of $\\Theta, \\x$.\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\begin{matrix}\n",
+    "\\sum{\n",
+    "\\begin{cases}\n",
+    "\\text{Machine} & \\text{Learning} & \\text{is} & \\text{easy} & \\text{not} & \\text{hard} \\\\\n",
+    "\\cdot & \\cdot & \\cdot & \\cdot & \\cdot & \\cdot \\\\\n",
+    "\\Theta_\\text{Machine} & \\Theta_\\text{Learning} & \\Theta_\\text{is} & \\Theta_\\text{easy} & \\Theta_\\text{not} & \\Theta_\\text{hard} \\\\\n",
+    "\\end{cases}\n",
+    "}\n",
+    "\\\\\n",
+    "= \\\\\n",
+    "\\sum{\n",
+    "\\begin{cases}\n",
+    "\\text{Machine} & \\text{Learning} & \\text{is} & \\text{hard}& \\text{not} & \\text{easy}  \\\\\n",
+    "\\cdot & \\cdot & \\cdot & \\cdot & \\cdot & \\cdot \\\\\n",
+    "\\Theta_\\text{Machine} & \\Theta_\\text{Learning} & \\Theta_\\text{is} & \\Theta_\\text{hard}& \\Theta_\\text{not} & \\Theta_\\text{easy} \\\\\n",
+    "\\end{cases}\n",
+    "}\n",
+    "\\end{matrix}\n",
+    "$$"
    ]
   },
   {
@@ -373,6 +391,9 @@
     "\n",
     "The Recurrent Neural Network (RNN) adopts the latter approach.\n",
     "\n",
+    "A prime advantage of the latent state approach\n",
+    "- it can handle sequences of *unbounded* length\n",
+    "\n",
     "Here is some pseudo-code:"
    ]
   },
@@ -514,7 +535,124 @@
     "Note that $\\x, \\y, \\h$ are all vectors. \n",
     "\n",
     "In particular, the state $\\h$ *may have many* elements\n",
+    "- it is a vector of \"synthesized\" features\n",
     "-  to record information about the entire prefix of the input."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "$\\h_\\tp$ is the latent state (sometimes called the *hidden state* as it is not visible outside the layer).\n",
+    "\n",
+    "It is essentially a *fixed length* encoding of the variable length sequence $[\\x_{(1)} \\dots \\x_\\tp]$\n",
+    "- All essential information about the prefix of $\\x$ ending at step $\\tt$ is recorded in $\\h_\\tp$\n",
+    "- Hence, the size of $\\h_\\tp$ may need to be large\n",
+    "\n",
+    "We will shortly attempt to gain some intuition as to what these synthesized features may be."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Let's make this concrete with an example: a sequence of words\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>RNN</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/RNN_loop_NLP.png\" width=1000></td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "$\\h_\\tp$ is a **fixed length** vector that \"summarizes\" the prefix of sequence $\\x$ up to element $t$.\n",
+    "\n",
+    "The sequence is processed element by element, so order matters.\n",
+    "\n",
+    "\\begin{array} \\\\\n",
+    "\\h_{(0)} & = & \\text{summary}( [ \\text{Machine} ]) \\\\\n",
+    "\\h_{(1)} & = & \\text{summary}( [ \\text{Machine, Learning} ]) \\\\\n",
+    "\\vdots \\\\\n",
+    "\\h_\\tp & = & \\text{summary}( [ \\x_{(0)}, \\ldots \\x_\\tp ] ) \\\\\n",
+    "\\vdots \\\\\n",
+    "\\h_{(5)} & = & \\text{summary}( [ \\text{Machine, Learning, is, easy, not, hard} ]) \\\\\n",
+    "\\end{array}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Turning an unbounded length sequence into a fixed length vector is very useful !\n",
+    "- All our other layer types take fixed length input\n",
+    "\n",
+    "So we can feed $\\h_{(5)}$ into a Classifier to decide on the sentiment of the sentence.\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center><strong>RNN Many to one; followed by classifier</strong></center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/RNN_many_to_one_to_classifier.jpg\" width=870%></td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Another common paradigm using RNN's that we will encounter is the *Encoder-Decoder*\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center><strong>Encoder-Decoder for language translation</strong></center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/RNN_layer_API_Encoder_Decoder_Language_Translation.png\" width=870%></td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- The final latent state $\\bar\\h_{(T)}$ of the Encoder \"summarizes\" the source sentence (English)\n",
+    "- It initializes the latent state of the Decoder which produces the target sentence (French)\n",
+    "- The Decoder implements a one-to-many API\n",
+    "    - source language \"summary\" as seed"
    ]
   },
   {
@@ -588,54 +726,6 @@
     "Geron does not distinguish between $\\y_\\tp$ and $\\h_\\tp$ and he uses the single $\\y_\\tp$ to denote the state.\n",
     "\n",
     "I will use $\\h$ rather than $\\y$ to denote the \"hidden state\".\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## $\\h_\\tp$ latent state\n",
-    "\n",
-    "$\\h_\\tp$ is the latent state (sometimes called the *hidden state* as it is not visible outside the layer).\n",
-    "\n",
-    "It is essentially a *fixed length* encoding of the variable length sequence $[\\x_{(1)} \\dots \\x_\\tp]$\n",
-    "- All essential information about the prefix of $\\x$ ending at step $\\tt$ is recorded in $\\h_\\tp$\n",
-    "- Hence, the size of $\\h_\\tp$ may need to be large"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Having a fixed length encoding for a variable length input is crucial\n",
-    "- We can feed the (fixed length representation of a) sequence to a Classical ML Classifier/Regressor\n",
-    "- Which have fixed length inputs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "<table>\n",
-    "    <tr>\n",
-    "        <th><center><strong>RNN Many to one; followed by classifier</strong></center></th>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td><img src=\"images/RNN_many_to_one_to_classifier.jpg\" width=800></td>\n",
-    "    </tr>\n",
-    "</table>"
    ]
   },
   {
