--- a/RNN_in_action.ipynb
+++ b/RNN_in_action.ipynb
@@ -345,8 +345,32 @@
     "## Predict the next: training\n",
     "\n",
     "Just like training any other type of layer, but more expensive\n",
-    "- Each example involves multiple time steps: forward pass time consuming\n",
-    "- The derivatives (needed for Gradient Descent) are more complex; backward pass complex and time consuming\n"
+    "- Each example involves multiple time steps: forward pass is time consuming\n",
+    "- The derivatives (needed for Gradient Descent) are more complex; backward pass complex and time consuming\n",
+    "\n",
+    "Remember:\n",
+    "- the target $\\y_\\tp$ for step $t$ should be $\\x_{(\\tt+1)}$ the next input\n",
+    "$$\n",
+    "\\y_\\tp = \\x_{(\\tt+1)}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Predict the next</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/RNN_layer_loss.png\"</td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -371,14 +395,54 @@
     }
    },
    "source": [
-    "Suppose\n",
-    "- We train the RNN on a large number of sentences of the same type (e.g., same author)\n",
-    "- Create a few words to create the prefix of a sentence\n",
-    "- Ask the RNN to predict the next word\n",
-    "- Append this word to the prefix\n",
-    "- Repeat !\n",
+    "Suppose we have trained our model on a large collection of sentences of the same type (e.g., same author).\n",
     "\n",
-    "Voila: the RNN can *generate* a story in the same style as the training sentences."
+    "At test time, we feed a short \"seed\" sentence\n",
+    "$$\n",
+    "\\x_{(0)}, \\ldots, \\x_\\tp\n",
+    "$$\n",
+    "into the model and have it generate output.\n",
+    "\n",
+    "**But** \n",
+    "we then feed the output back into the model as input !\n",
+    "$$\n",
+    "\\x_{(\\tt'+1)} = \\y_{(\\tt')} \\; \\text{for } \\tt' \\ge \\tt\n",
+    "$$\n",
+    "\n",
+    "- as in the Decoder in our Language Translation example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Test time: no forcing</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/RNN_layer_API_one_to_many.png\"></td>\n",
+    "    </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The model would generate new text ad infinitum\n",
+    "- The next word generated would be based on what the model has learned from training\n",
+    "- To be the most probable word to follow the prefix\n",
+    "\n",
+    "Voila: the RNN can *generate* text in the same style as the training sentences."
    ]
   },
   {
@@ -392,275 +456,6 @@
     "Using Machine Learning to *create* data is called *generative*.\n",
     "\n",
     "Using Machine Learning to classify/predict (as we've been doing thus far) is called *discriminative*."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Architecture\n",
-    "\n",
-    "How do we construct a model to solve this task ?\n",
-    "\n",
-    "We construct a two part model in what is known as an *Encoder/Decoder* architecture"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "The *Encoder* is a many to one RNN\n",
-    "- Takes the variable length \"seed\" sequence\n",
-    "- Outputs a fixed length representation of the seed\n",
-    "    - This is one of the strengths of an RNN\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "The *Decoder* is a one to many RNN\n",
-    "- Takes the fixed length representation of the seed produced by the Encoder\n",
-    "    - Used to initialized the Decoder's latent state $\\h_{(0)}$\n",
-    "- Outputs a variable length sequence"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "The only thing unusual about the Decoder is how its input sequence is constructed\n",
-    "- All the elements of its input $\\x$ are *generated* by the Decoder\n",
-    "- The first element of $\\x$ is set to a special \"start of output\" symbol\n",
-    "$$\\x_{(1)} = \\langle \\text{START} \\rangle$$\n",
-    "- $\\x_\\tp$ is extending *dynamically*, using the previous prediction $\\hat{\\y}_{(\\tt-1)}$\n",
-    "$$\n",
-    "\\x^\\ip_\\tp = \\y_{(t-1)}\n",
-    "$$\n",
-    "- The Decoder stops when it generates a special \"end of output\" symbol $\\langle \\text{END} \\rangle$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "<table>\n",
-    "    <tr>\n",
-    "        <th><center>Sequence to Sequence: inference</center></th>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td><img src=\"images/RNN_seq2seq.png\"></td>\n",
-    "    </tr>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "That is\n",
-    "- The output is fed as the next input\n",
-    "- Thus extending the sequence\n",
-    "- And making sure that subsequent elements are influenced by all previously *generated* elements\n",
-    "- Continuing until the special $\\langle \\text{END} \\rangle$ symbol is generated"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Training: Teacher forcing\n",
-    "\n",
-    "Some issues arise in using an RNN in the generative manner.\n",
-    "\n",
-    "The first issue:\n",
-    "- Is the prediction a single word or a probability distribution over the vocabulary $||V||$\n",
-    "- If it's a single word: the output is deterministic\n",
-    "    - Problematic once one word is wrong: the error propagates forward"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "The output of the multinomial classifier is a vector of length $||V||$\n",
-    "- With values in the range $[0,1]$ that can be interpretted as probabilities\n",
-    "- Rather than choosing the single word with highest probability\n",
-    "- We *sample* one word at random, according to the probability distribution\n",
-    "\n",
-    "This makes the output non-deterministic: running the model twice with the same \"seed\" may give different stories."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "A second issue\n",
-    "- If a wrong word is chosen at step $\\tt$: it affects the generation of all words at step $\\tt \\gt \\tt'$ \n",
-    "- This is particularly problematic at *training* time: makes learning difficult"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "The solution for training an RNN for this task is a method known as *teacher forcing*\n",
-    "- Rather than extending the seed example $\\x^\\ip = [ \\; \\x^\\ip_\\tp \\, | \\, 1 \\le \\tt \\le t' \\; ]$\n",
-    "    - With $\\hat{\\y}_\\tp$, the *predicted* $\\tt^{th}$ word for $(\\tt > \\tt')$\n",
-    "    - Which is what would happen at inference/test time\n",
-    "    - Extend it with $\\y_\\tp$, the *target* (i.e., correct  $\\tt^{th}$ word)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "In other words: to speed up training\n",
-    "- When extending the prefix\n",
-    "- A teacher forces the student (model) to continue with the *correct* answer\n",
-    "- Rather than the student's answer\n",
-    "\n",
-    "$$\n",
-    "\\x^\\ip_\\tp = \\y_{(t-1)}\n",
-    "$$\n",
-    "for $t > t'$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "<table>\n",
-    "    <tr>\n",
-    "        <th><center>Sequence to Sequence: training (teacher forcing)</center></th>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td><img src=\"images/RNN_seq2seq.png\"></td>\n",
-    "    </tr>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Teacher forcing is indicated in red\n",
-    "- Predictions $[ \\; \\hat{\\y}_\\tp \\, | \\, 1 \\le \\tt \\le T \\; ]$ **are not** used as input (lower right)\n",
-    "- Only correct targets $[ \\; \\y_\\tp \\, | \\, 1 \\le \\tt \\le T \\; ]$ are used"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Summary\n",
-    "\n",
-    "Here is an unrolled graph at inference/test time"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "<table>\n",
-    "    <tr>\n",
-    "        <th><center>Test time: no forcing</center></th>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td><img src=\"images/RNN_layer_API_one_to_many.png\"></td>\n",
-    "    </tr>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "And here is a depiction of the graph used at *training* time"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "<table>\n",
-    "    <tr>\n",
-    "        <th><center>Training, with Teacher Forcing</center></th>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td><img src=\"images/RNN_layer_API_many_to_many_teacher_forcing.png\"></td>\n",
-    "    </tr>\n",
-    "</table>"
    ]
   },
   {
@@ -736,6 +531,222 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Training the generative model\n",
+    "\n",
+    "Let's describe this generative process in more detail.\n",
+    "\n",
+    "First: training a model.\n",
+    "\n",
+    "At test-time (when we are generating new text) the outputs are fed back as next-step inputs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Test time: no forcing</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/RNN_layer_API_one_to_many.png\"></td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "But that's **not** how the model is trained\n",
+    "- the \"next step\" input is the **true** next element in the sequence\n",
+    "- this is how we construct the training data set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Training, with Teacher Forcing</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/RNN_layer_API_many_to_many_teacher_forcing.png\"></td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "This is called *teacher forcing*\n",
+    "\n",
+    "$$\n",
+    "\\x^\\ip_\\tp = \\y_{(t-1)}\n",
+    "$$\n",
+    "rather than\n",
+    "$$\n",
+    "\\x^\\ip_\\tp = \\hat\\y_{(t-1)}\n",
+    "$$\n",
+    "for $t > t'$.\n",
+    "\n",
+    "- When extending the sequence\n",
+    "- A teacher forces the student (model) to continue with the *correct* answer\n",
+    "- Rather than the student's answer\n",
+    "- If it didn't do so, once the student (model) predicted incorrectly, it's errors would compound\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Sampling from the generative model\n",
+    "\n",
+    "Remember that a Classifier (the output stage of our model)\n",
+    "- generates a *probability distribution* (over the elements of the vocabulary $V$)\n",
+    "\n",
+    "For the prediction, we usually *deterministically* choose the element of $V$ with highest probability\n",
+    "$$\n",
+    "\\hat{\\y} = \\text{argmax}_{v \\in V} { p(v) }\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Deterministic choice might not be best for the generative process\n",
+    "- One wrong choice propagates to all successive elements of the sequence\n",
+    "- The output is always the same ! Boring !\n",
+    "\n",
+    "So what is usually done is that our prediction is a *sample* from the probability distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Summary\n",
+    "\n",
+    "Here is the process in pictures\n",
+    "- The training inputs are given in red\n",
+    "- The test (inference) time inputs are given in black"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Teacher forcing is indicated in red\n",
+    "- Predictions $[ \\; \\hat{\\y}_\\tp \\, | \\, 1 \\le \\tt \\le T \\; ]$ **are not** used as input (lower right)\n",
+    "- Only correct targets $[ \\; \\y_\\tp \\, | \\, 1 \\le \\tt \\le T \\; ]$ are used"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Sequence to Sequence: training (teacher forcing)</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/RNN_seq2seq.png\"></td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The input sequence to the Decoder is modified by\n",
+    "- prepending a special \"start of output\" symbol\n",
+    "$$\\x_{(-1)} = \\langle \\text{START} \\rangle$$\n",
+    "- appending a special \"end of output\" symbol $\\langle \\text{END} \\rangle$ to training examples\n",
+    "    - The Decoder stops when it generates the end of output symbol\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The *Encoder* is a many to one RNN\n",
+    "- Takes the variable length \"seed\" sequence\n",
+    "- Outputs a fixed length representation of the seed\n",
+    "    - This is one of the strengths of an RNN\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The *Decoder* is a one to many RNN\n",
+    "- Takes the fixed length representation of the seed produced by the Encoder\n",
+    "    - Used to initialized the Decoder's latent state $\\h_{(0)}$\n",
+    "- Outputs a variable length sequence"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -792,7 +803,7 @@
     "width": "370.594px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
