--- a/Index.ipynb
+++ b/Index.ipynb
@@ -379,10 +379,14 @@
     "    - [CNN example from github](CNN_demo.ipynb) (**local machine**) \n",
     "\n",
     "**Training Neural Networks (introduction)**\n",
-    "- [Training Neural Networks - introduction](Training_Neural_Networks_Intro.ipynb)\n",
+    "- [Training Neural Networks - Back propagation](Training_Neural_Network_Backprop.ipynb)\n",
     "\n",
     "**Deeper dives**\n",
-    "- [Convolution as Matrix Multiplication](CNN_Convolution_as_Matrix_Multiplication.ipynb)\n"
+    "- [Convolution as Matrix Multiplication](CNN_Convolution_as_Matrix_Multiplication.ipynb)\n",
+    "\n",
+    "## Recurrent Neural Networks\n",
+    "\n",
+    "- [Introduction to Recurrent Neural Network (RNN)](Intro_to_RNN.ipynb)"
    ]
   },
   {
@@ -400,7 +404,7 @@
     "    - Part of our \"sprint\": final layer type\n",
     "    - Will revisit more theoretical issues in subsequent lectures\n",
     "    \n",
-    "- [Introduction to Recurrent Neural Network (RNN)](Intro_to_RNN.ipynb)\n",
+    "- [Introduction to Recurrent Neural Network (RNN) -- continued](Intro_to_RNN.ipynb#Recurrent-Neural-Network-(RNN)-layer)\n",
     "- [Recurrent Neural Network Overview](RNN_Overview.ipynb)\n",
     "    - [LSTM_text_generation from github](https://colab.research.google.com/github/kenperry-public/ML_Spring_2021/blob/master/Keras_examples_LSTM_text_generation.ipynb) (**Colab**)\n",
     "    - [LSTM_text_generation from github](Keras_examples_LSTM_text_generation.ipynb) (**local machine**)\n",
@@ -426,7 +430,9 @@
     "\n",
     "Explore the science and art of training a neural network via Gradient Descent.\n",
     "\n",
-    "- [Training Neural Networks](Training_Neural_Networks_Overview.ipynb)"
+    "- [Training Neural Networks: fine details](Training_Neural_Networks_Overview.ipynb)\n",
+    "- [What layer type to choose](Neural_Network_Layer_Review.ipynb)\n",
+    "\n"
    ]
   },
   {
@@ -517,6 +523,20 @@
    "source": [
     "## Keras practice\n",
     "- Assignment notebook [Ships in satellite images: Neural Network](assignments/keras_intro/Ships_in_satellite_images_P1.ipynb)\n",
+    "- Data (same as for the Classification assignment)\n",
+    "    - please repeat the directions given in that assignment for obtaining the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Convolutional Neural Networks (CNN)\n",
+    "- Assignment notebook [Ships in satellite images: Neural Network](assignments/CNN_intro/Ships_in_satellite_images_P2.ipynb)\n",
     "- Data (same as for the Classification assignment)\n",
     "    - please repeat the directions given in that assignment for obtaining the data"
    ]
